--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^10.0"
+    },
+    "require": {
+        "filp/whoops": "^2.15"
     }
 }
